# alpha1-proxy

./: CMakeLists.txt  Proxy.sln  README.md
Proxy/: Proxy.vcxproj  dllmain.cpp  modloader.cpp  modloader.hpp  winhttp.cpp
module/: winhttp.def
src/: dllmain.cpp  winhttp.cpp
